--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>reportingapp</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>reportingapp</name>
-    <description>reportingapp</description>
+    <description>Reporting Application</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -31,7 +31,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
