--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=8080
 
+spring.datasource.url=jdbc:h2:mem:reports
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
