02.Entity development part 4

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-spring.datasource.url=jdbc:h2:mem:reports
+spring.datasource.url=jdbc:h2:mem:reports;DATABASE_TO_UPPER=false
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.show-sql=true
