05. RepositoriesTest part02 - add ReportBase - prepare for Specification and Dynamic Query

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>32.0.1-jre</version>
+        </dependency>
         <!--
         <dependency>
             <groupId>com.mysql</groupId>
